# anthic-service

./: Cargo.toml  Dockerfile  README.md
sdk/anthic-trade-api-client/src/: model.rs
service/: Cargo.toml
service/src/: core.rs  main.rs
