[package]
name = "anthic-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "anthic-service"

[dependencies]
radix-common = { workspace = true }
radix-common-derive = { workspace = true }
radix-transactions = { workspace = true }
tokio = { version = "1.32.0", features = ["full"]}
rand = "0.8.5"
chrono = { version = "0.4.26" }
anthic-subintents = { path = "../sdk/anthic-subintents" }
anthic-client = { path = "../sdk/anthic-client" }
anthic-model = { path = "../sdk/anthic-model" }
actix = "0.13"
actix-web = "4.9.0" # Web framework for Rust
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128" # JSON serialization/deserialization for Serde
